# api/swagger/model-schema.js
@@ -2,6 +2,15 @@
 
 /**
  * @swagger
+ * tags:
+ *  - name: error
+ *    description: 'Everything you need to know about Error'
+ *  - name: health
+ *    description: 'Everything you need to know about Health'
+ *  - name: authorizationResponses
+ *    description: 'Everything you need to know about AuthorizationResponses'
+ *  - name: tokenResponses
+ *    description: 'Everything you need to know about TokenResponses'
  * definitions:
  *   Error:
  *     type: object
@@ -16,29 +25,25 @@
  *        - cpuPercentUsage
  *        - totalMemPercentageUsage
  *        - loadAvg
- *   AuthorizationRequest:
- *     type: object
- *     required:
- *       - response_type
- *       - client_id
- *       - client_secret
- *       - scope
  *     properties:
- *        response_type:
- *          type: string
- *        client_id:
- *          type: string
- *        client_secret:
- *          type: string
- *        scope:
- *          type: string
+ *        cpuPercentUsage:
+ *          type: number
+ *        totalMemPercentageUsage:
+ *          type: number
+ *        loadAvg:
+ *          type: number
  *   AuthorizationResponse:
  *      type: object
  *      required:
  *        - redirect_uri
+ *      properties:
+ *        redirect_uri:
+ *          type: string
  *   TokenResponse:
  *      type: object
  *      required:
  *        - access_token
- *
+ *      properties:
+ *        access_token:
+ *          type: string
  */
